examples/bad/type11.swifty
//undefined variable
print x

//undefined function
print foo(1)
